--- a/DayDayUp/Views/HomePage.xaml
+++ b/DayDayUp/Views/HomePage.xaml
@@ -1,11 +1,10 @@
 ﻿<Page
     x:Class="DayDayUp.Views.HomePage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DayDayUp.Views"
-      xmlns:helper="using:DayDayUp.Helpers"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:helper="using:DayDayUp.Helpers"
       xmlns:models="using:DayDayUp.Models"
       xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
       mc:Ignorable="d"
@@ -25,18 +24,19 @@
             <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0"
-                   x:Name="Title"
+        <TextBlock x:Name="Title"
                    Text="Home"
                    Style="{StaticResource TitleTextStyle}" />
         <SplitView  Grid.Row="1"
                     x:Name="HomeSplitView"
                     IsPaneOpen="False"
+                    CharacterSpacing="10"
                     OpenPaneLength="300"
                     CompactPaneLength="48"
                     DisplayMode="Inline"
-                    PanePlacement="Right">
-            <Grid Name="LeftView">
+                    PanePlacement="Right"
+                    LightDismissOverlayMode="Auto">
+            <Grid Name="LeftView" Margin="0,0,12,0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -49,7 +49,6 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
                             <ColumnDefinition Width="Auto" />
-                            <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
                         <TextBox x:Name="newTaskTextBox"
                                  Grid.Column="0"
@@ -58,11 +57,17 @@
                                  HorizontalAlignment="Stretch" />
                         <muxc:DropDownButton x:Name="TaskDurationSelectionButton"
                                              Grid.Column="1"
-                                             Content="Estimated duration"
                                              HorizontalAlignment="Center"
-                                             Margin="{StaticResource ContentMargin}">
+                                             Margin="{StaticResource ContentMargin}"
+                                             ToolTipService.ToolTip="Estimated duration">
+                            <muxc:DropDownButton.Content>
+                                <FontIcon FontFamily="Segoe MDl2 Assets"
+                                          Glyph="&#xe823;" />
+                            </muxc:DropDownButton.Content>
                             <muxc:DropDownButton.Flyout>
                                 <MenuFlyout Placement="Bottom">
+                                    <MenuFlyoutItem Text="None"
+                                                    Click="AlignmentMenuFlyoutItem5_Click" />
                                     <MenuFlyoutItem Text="30 mins"
                                                     Click="AlignmentMenuFlyoutItem0_Click" />
                                     <MenuFlyoutItem Text="1 hour"
@@ -76,12 +81,13 @@
                                 </MenuFlyout>
                             </muxc:DropDownButton.Flyout>
                         </muxc:DropDownButton>
-                        <Button Grid.Column="2"
-                                Style="{StaticResource AccentButtonStyle}"
+                        <!--<Button Grid.Column="2"
                                 Margin="{StaticResource ContentMargin}"
-                                Content="Add"
                                 Click="AddTaskButton_Click"
-                                HorizontalAlignment="Right" />
+                                HorizontalAlignment="Right">
+                            <FontIcon FontFamily="Segoe MDl2 Assets"
+                                      Glyph="&#xe948;"/>
+                        </Button>-->
                     </Grid>
                 </StackPanel>
                 <TextBlock Grid.Row="1"
@@ -108,14 +114,14 @@
                                       x:DataType="models:Todo">
                             <Grid Height="{StaticResource ItemHeight}">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="32" />
+                                    <ColumnDefinition Width="36" />
                                     <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="72" />
                                 </Grid.ColumnDefinitions>
                                 <CheckBox Grid.Column="0"
                                           IsChecked="{x:Bind IsFinished}"
                                           Click="TaskCheckBox_Click"
-                                          VerticalAlignment="Center" />
+                                          VerticalAlignment="Center"/>
                                 <TextBlock Grid.Column="1"
                                            x:Name="taskNameTextBlock"
                                            VerticalAlignment="Center"
@@ -134,16 +140,16 @@
                                         <SymbolIcon Name="StartIcon"
                                                     Symbol="Play"
                                                     Visibility="{x:Bind Status,  Mode=OneWay,Converter={StaticResource NegativeTaskStatusConverter}}"
-                                                    VerticalAlignment="Center" />
+                                                    />
                                         <SymbolIcon Name="PauseIcon"
                                                     Symbol="Pause"
-                                                    VerticalAlignment="Center"
                                                     Visibility="{x:Bind Status,  Mode=OneWay,Converter={StaticResource TaskStatusConverter}}" />
                                     </StackPanel>
                                 </AppBarButton>
                                 <muxc:ProgressRing Grid.Column="2"
                                                    Width="28"
                                                    Height="28"
+                                                   HorizontalAlignment="Center"
                                                    VerticalAlignment="Center"
                                                    Value="{x:Bind Progress}"
                                                    Visibility="{x:Bind Status, Mode=OneWay,Converter={StaticResource TaskStatusConverter}}"
@@ -165,9 +171,9 @@
                 </RichTextBlock>
             </Grid>
             <SplitView.Pane>
-                <ScrollViewer Margin="{StaticResource ContentMargin}">
-                    <StackPanel Padding="20"
-                                CornerRadius="4">
+                <ScrollViewer Padding="20"
+                              CornerRadius="4">
+                    <StackPanel>
                         <TextBlock Text="Details"
                                    Style="{ThemeResource SubtitleTextStyle}" />
                         <TextBlock Text="Name"
@@ -221,10 +227,13 @@
                                        Style="{ThemeResource BasicTextStyle}" />
                         </StackPanel>
                         <Button Margin="{StaticResource ElementMargin}"
-                                Content="Done"
                                 Style="{StaticResource AccentButtonStyle}"
                                 HorizontalAlignment="Stretch"
-                                Click="FinishButton_Click" />
+                                Click="FinishButton_Click"
+                                ToolTipService.ToolTip="Done">
+                            <FontIcon FontFamily="Segoe MDL2 Assets"
+                                      Glyph="&#xf78c;" />
+                        </Button>
                     </StackPanel>
                 </ScrollViewer>
             </SplitView.Pane>
