--- a/DayDayUp/Views/DashboardPage.xaml
+++ b/DayDayUp/Views/DashboardPage.xaml
@@ -1,17 +1,14 @@
 ﻿<Page
     x:Class="DayDayUp.Views.DashboardPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DayDayUp.Views"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:helper="using:DayDayUp.Helpers"
-      xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
-      xmlns:lvc="using:LiveChartsCore.SkiaSharpView.UWP"
-      xmlns:muxc1="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:viewModel="using:DayDayUp.ViewModels"
-      mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+      xmlns:lvc="using:LiveChartsCore.SkiaSharpView.UWP"
+      xmlns:views="using:DayDayUp.Views"
+      mc:Ignorable="d">
     <Page.Resources>
         <helper:CountToVisibilityConverter x:Key="CountConverter" />
         <helper:CountToVisibilityNegativeConverter x:Key="NegativeCountConverter" />
@@ -22,85 +19,50 @@
           x:Name="ContentArea">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="1.2*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="1.2*" />
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0"
                    x:Name="Title"
                    Text="DashBoard"
                    Style="{StaticResource TitleTextStyle}" />
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" Margin="0,0,0,20">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="1.5*" />
             </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
+            <Grid  Grid.Column="0" Margin="0,0,20,0" RowSpacing="12" ColumnSpacing="12">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="0"
-                           Text="Summary"
-                           Style="{StaticResource SubtitleTextStyle}" />
-                <Grid Grid.Row="1">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Row="0"
-                                Grid.Column="0"
-                                Orientation="Vertical">
-                        <TextBlock Text="Doing"
-                                   Style="{StaticResource SubsubtitleTextStyle}" />
-                        <TextBlock Text="{Binding DoingTaskCount}"
-                                   Style="{StaticResource SummaryTextStyle}"
-                                   Foreground="CadetBlue" />
-                    </StackPanel>
-                    <StackPanel Grid.Row="0"
-                                Grid.Column="1"
-                                Orientation="Vertical">
-                        <TextBlock Text="Finished"
-                                   Style="{StaticResource SubsubtitleTextStyle}" />
-                        <TextBlock Text="{Binding FinishedTaskCount}"
-                                   Style="{StaticResource SummaryTextStyle}"
-                                   Foreground="CadetBlue" />
-                    </StackPanel>
-                    <StackPanel Grid.Row="1"
-                                Grid.Column="0"
-                                Orientation="Vertical">
-                        <TextBlock Text="Current Bias"
-                                   Style="{StaticResource SubsubtitleTextStyle}" />
-                        <TextBlock Text="{Binding DoingTaskBias,  Mode=OneWay, Converter={StaticResource DoubleToRatioConverter}}"
-                                   Style="{StaticResource SummaryTextStyle}"
-                                   Foreground="IndianRed" />
-                    </StackPanel>
-                    <StackPanel Grid.Row="1"
-                                Grid.Column="1"
-                                Orientation="Vertical">
-                        <TextBlock Text="Histroy Bias"
-                                   Style="{StaticResource SubsubtitleTextStyle}" />
-                        <TextBlock Text="{Binding FinishedTaskBias,  Mode=OneWay, Converter={StaticResource DoubleToRatioConverter}}"
-                                   Style="{StaticResource SummaryTextStyle}"
-                                   Foreground="IndianRed" />
-                    </StackPanel>
-                    <StackPanel Grid.Row="1"
-                                Grid.Column="2"
-                                Orientation="Vertical">
-                        <TextBlock Text="Total Bias"
-                                   Style="{StaticResource SubsubtitleTextStyle}" />
-                        <TextBlock Text="{Binding TotalBias, Mode=OneWay, Converter={StaticResource DoubleToRatioConverter}}"
-                                   Style="{StaticResource SummaryTextStyle}"
-                                   Foreground="IndianRed" />
-                    </StackPanel>
-                </Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <views:SummaryItem Grid.Row="0"
+                                   Grid.Column="0"
+                                   Title="Doing"
+                                   Number="{Binding DoingTaskCount}" />
+                <views:SummaryItem Grid.Row="0"
+                                   Grid.Column="1"
+                                   Title="Finished"
+                                   Number="{Binding FinishedTaskCount}" />
+                <views:SummaryItem Grid.Row="1"
+                                   Grid.Column="0"
+                                   Title="Current Bias"
+                                   Number="{Binding DoingTaskBias,  Mode=OneWay, Converter={StaticResource DoubleToRatioConverter}}" />
+                <views:SummaryItem Grid.Row="1"
+                                   Grid.Column="1"
+                                   Title="History Bias"
+                                   Number="{Binding FinishedTaskBias,  Mode=OneWay, Converter={StaticResource DoubleToRatioConverter}}" />
             </Grid>
             <Grid Grid.Column="1"
-                  CornerRadius="4">
+                  Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                  BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                  BorderThickness="1"
+                  CornerRadius="{StaticResource ControlCornerRadius}"
+                  Padding="8">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition />
@@ -113,21 +75,17 @@
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Statistics"
                                Style="{StaticResource SubtitleTextStyle}" />
-                    <muxc:DropDownButton Grid.Column="1"
-                                         Content="Progress"
-                                         HorizontalAlignment="Right">
-                        <muxc:DropDownButton.Flyout>
-                            <MenuFlyout Placement="Bottom">
-                                <MenuFlyoutItem Text="Duration" />
-                                <MenuFlyoutItem Text="Creation Date" />
-                            </MenuFlyout>
-                        </muxc:DropDownButton.Flyout>
-                    </muxc:DropDownButton>
+                    <ComboBox Grid.Column="1"
+                              x:Name="ComboBox"
+                              ItemsSource="{Binding Categories}"
+                              Width="160"
+                              HorizontalAlignment="Right"
+                              SelectedIndex="0"/>
                 </Grid>
-                <muxc1:ListView Grid.Row="1"
-                               Visibility="{Binding DoingTaskCount, Converter={StaticResource CountConverter}, Mode=OneWay}"
-                               ItemsSource="{x:Bind ViewModel.Statics}"
-                               SelectionMode="None">
+                <ListView Grid.Row="1"
+                          Visibility="{Binding DoingTaskCount, Converter={StaticResource CountConverter}, Mode=OneWay}"
+                          ItemsSource="{x:Bind ViewModel.Statics}"
+                          SelectionMode="None">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="viewModel:DoingStatics">
                             <Grid Height="{StaticResource ItemHeight}">
@@ -152,7 +110,7 @@
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                </muxc1:ListView>
+                </ListView>
                 <TextBlock Name="DefaultText"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"
@@ -162,7 +120,12 @@
                            Style="{StaticResource BasicTextStyle}" />
             </Grid>
         </Grid>
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2"
+              Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+              BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+              BorderThickness="1"
+              CornerRadius="{StaticResource ControlCornerRadius}"
+              Padding="8">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
