--- a/DayDayUp/Views/SettingsPage.xaml
+++ b/DayDayUp/Views/SettingsPage.xaml
@@ -5,8 +5,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:helper="using:DayDayUp.Helpers"
-      mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+      mc:Ignorable="d">
     <Page.Resources>
         <helper:EnumToBooleanConverter x:Key="EnumToBooleanConverter"
                                        EnumType="ElementTheme" />
