--- a/DayDayUp/App.xaml
+++ b/DayDayUp/App.xaml
@@ -1,15 +1,222 @@
 ﻿<Application
     x:Class="DayDayUp.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DayDayUp">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:primitives="using:Microsoft.UI.Xaml.Controls.Primitives">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
                 <ResourceDictionary Source="ms-appx:///Styles/Fonts.xaml" />
                 <ResourceDictionary Source="ms-appx:///Styles/Generic.xaml" />
+                <ResourceDictionary>
+                    <StaticResource x:Key="NavigationViewContentBackground"
+                                    ResourceKey="SystemControlTransparentBrush" />
+                    <Thickness x:Key="NavigationViewContentPresenterMargin">0</Thickness>
+                    <Thickness x:Key="NavigationViewMinimalContentGridBorderThickness">0</Thickness>
+                    <ResourceDictionary.ThemeDictionaries>
+                        <ResourceDictionary x:Key="Default">
+                            <StaticResource x:Key="DarkAcrylicInAppFillColorDefaultBrush"
+                                            ResourceKey="AcrylicInAppFillColorDefaultBrush" />
+                            <StaticResource x:Key="NavigationViewDefaultPaneBackground"
+                                            ResourceKey="DarkAcrylicInAppFillColorDefaultBrush" />
+                        </ResourceDictionary>
+                        <ResourceDictionary x:Key="Light">
+                            <StaticResource x:Key="LightAcrylicInAppFillColorDefaultBrush"
+                                            ResourceKey="AcrylicInAppFillColorDefaultBrush" />
+                            <StaticResource x:Key="NavigationViewDefaultPaneBackground"
+                                            ResourceKey="LightAcrylicInAppFillColorDefaultBrush" />
+                        </ResourceDictionary>
+                        <ResourceDictionary x:Key="HighContrast">
+                            <StaticResource x:Key="HCAcrylicInAppFillColorDefaultBrush"
+                                            ResourceKey="AcrylicInAppFillColorDefaultBrush" />
+                            <StaticResource x:Key="NavigationViewDefaultPaneBackground"
+                                            ResourceKey="HCAcrylicInAppFillColorDefaultBrush" />
+                        </ResourceDictionary>
+                    </ResourceDictionary.ThemeDictionaries>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
+            
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Dark">
+                    <Thickness x:Key="ControlBorderThemeThickness">0</Thickness>
+                    <Thickness x:Key="HighContrastThicknessTop">0,0,0,0</Thickness>
+                    <x:Double x:Key="HighContrastStrokeThickness">0</x:Double>
+                    <Color x:Key="AltHighColor">#FF000000</Color>
+                    <Color x:Key="ChromeMediumLowColor">#FF2B2B2B</Color>
+                    <Color x:Key="OperatorPanelScrollButtonBackgroundColor">#FF858585</Color>
+                    <SolidColorBrush x:Key="SystemControlBackgroundAltHighBrush"
+                                     Color="{StaticResource AltHighColor}" />
+                    <SolidColorBrush x:Key="SystemControlBackgroundChromeMediumLowBrush"
+                                     Color="{StaticResource ChromeMediumLowColor}" />
+                    <SolidColorBrush x:Key="SystemControlBackgroundTransparentBrush"
+                                     Color="Transparent" />
+                    <SolidColorBrush x:Key="SystemControlHighlightTransparentBrush"
+                                     Color="Transparent" />
+                    <StaticResource x:Key="AppControlBackgroundSecondaryBrush"
+                                    ResourceKey="SubtleFillColorSecondaryBrush" />
+                </ResourceDictionary>
+                <ResourceDictionary x:Key="Light">
+                    <Thickness x:Key="ControlBorderThemeThickness">0</Thickness>
+                    <Thickness x:Key="HighContrastThicknessTop">0,0,0,0</Thickness>
+                    <x:Double x:Key="HighContrastStrokeThickness">0</x:Double>
+                    <Color x:Key="AltHighColor">#FFF2F2F2</Color>
+                    <Color x:Key="ChromeMediumLowColor">#FFE0E0E0</Color>
+                    <Color x:Key="OperatorPanelScrollButtonBackgroundColor">#FF858585</Color>
+                    <SolidColorBrush x:Key="SystemControlBackgroundAltHighBrush"
+                                     Color="{StaticResource SystemAltHighColor}" />
+                    <SolidColorBrush x:Key="SystemControlBackgroundChromeMediumLowBrush"
+                                     Color="{StaticResource ChromeMediumLowColor}" />
+                    <SolidColorBrush x:Key="SystemControlBackgroundTransparentBrush"
+                                     Color="Transparent" />
+                    <SolidColorBrush x:Key="SystemControlHighlightTransparentBrush"
+                                     Color="Transparent" />
+                    <StaticResource x:Key="AppControlBackgroundSecondaryBrush"
+                                    ResourceKey="SubtleFillColorSecondaryBrush" />
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+            <x:Double x:Key="Breakpoint640Plus">641</x:Double>
+            <primitives:CornerRadiusFilterConverter x:Key="CornerRadiusTopLeftToDoubleConverter"
+                                                    Filter="TopLeftValue" />
+            <Style x:Key="ListViewItemContainerStyle"
+                   TargetType="ListViewItem">
+                <Setter Property="Background"
+                        Value="{ThemeResource SystemControlBackgroundTransparentBrush}" />
+                <Setter Property="Foreground"
+                        Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
+                <Setter Property="TabNavigation"
+                        Value="Local" />
+                <Setter Property="Padding"
+                        Value="0" />
+                <Setter Property="HorizontalContentAlignment"
+                        Value="Stretch" />
+                <Setter Property="VerticalContentAlignment"
+                        Value="Center" />
+                <Setter Property="MinWidth"
+                        Value="{ThemeResource ListViewItemMinWidth}" />
+                <Setter Property="MinHeight"
+                        Value="{ThemeResource ListViewItemMinHeight}" />
+                <Setter Property="UseSystemFocusVisuals"
+                        Value="True" />
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="ListViewItem">
+                            <Grid x:Name="ContentBorder"
+                                  Background="{TemplateBinding Background}"
+                                  BorderBrush="{TemplateBinding BorderBrush}"
+                                  BorderThickness="{TemplateBinding BorderThickness}">
+                                <VisualStateManager.VisualStateGroups>
+                                    <VisualStateGroup x:Name="CommonStates">
+                                        <VisualState x:Name="Normal" />
+                                        <VisualState x:Name="PointerOver">
+                                            <VisualState.Setters>
+                                                <Setter Target="ContentPresenter.Foreground"
+                                                        Value="{ThemeResource TextFillColorPrimaryBrush}" />
+                                                <Setter Target="BorderBackground.Opacity"
+                                                        Value="1" />
+                                                <Setter Target="BorderBackground.Fill"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Stroke"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                        <VisualState x:Name="Pressed">
+                                            <VisualState.Setters>
+                                                <Setter Target="ContentPresenter.Foreground"
+                                                        Value="{ThemeResource TextFillColorSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Opacity"
+                                                        Value="1" />
+                                                <Setter Target="BorderBackground.Fill"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Stroke"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                            </VisualState.Setters>
+                                            <Storyboard>
+                                                <PointerDownThemeAnimation TargetName="ContentPresenter" />
+                                            </Storyboard>
+                                        </VisualState>
+                                        <VisualState x:Name="Selected">
+                                            <VisualState.Setters>
+                                                <Setter Target="ContentPresenter.Foreground"
+                                                        Value="{ThemeResource TextFillColorSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Opacity"
+                                                        Value="1" />
+                                                <Setter Target="BorderBackground.Fill"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Stroke"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                        <VisualState x:Name="PointerOverSelected">
+                                            <VisualState.Setters>
+                                                <Setter Target="ContentPresenter.Foreground"
+                                                        Value="{ThemeResource TextFillColorSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Opacity"
+                                                        Value="1" />
+                                                <Setter Target="BorderBackground.Fill"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                                <Setter Target="BorderBackground.Stroke"
+                                                        Value="{ThemeResource AppControlBackgroundSecondaryBrush}" />
+                                            </VisualState.Setters>
+                                        </VisualState>
+                                        <VisualState x:Name="PressedSelected" />
+                                        <VisualStateGroup.Transitions>
+                                            <VisualTransition From="Pressed"
+                                                              To="Normal">
+                                                <Storyboard>
+                                                    <PointerUpThemeAnimation Storyboard.TargetName="ContentPresenter" />
+                                                </Storyboard>
+                                            </VisualTransition>
+                                            <VisualTransition From="Pressed"
+                                                              To="PointerOverSelected">
+                                                <Storyboard>
+                                                    <PointerUpThemeAnimation Storyboard.TargetName="ContentPresenter" />
+                                                </Storyboard>
+                                            </VisualTransition>
+                                        </VisualStateGroup.Transitions>
+                                    </VisualStateGroup>
+                                </VisualStateManager.VisualStateGroups>
+                                <Rectangle x:Name="BorderBackground"
+                                           Fill="{ThemeResource SubtleFillColorTransparentBrush}"
+                                           StrokeThickness="{ThemeResource HighContrastStrokeThickness}"
+                                           Opacity="0"
+                                           IsHitTestVisible="False"
+                                           RadiusX="{Binding Source={ThemeResource ControlCornerRadius}, Converter={StaticResource CornerRadiusTopLeftToDoubleConverter}, Mode=OneWay}"
+                                           RadiusY="{Binding Source={ThemeResource ControlCornerRadius}, Converter={StaticResource CornerRadiusTopLeftToDoubleConverter}, Mode=OneWay}" />
+                                <Grid x:Name="ContentPresenterGrid"
+                                      Margin="0,0,0,0"
+                                      Background="Transparent">
+                                    <Grid.RenderTransform>
+                                        <TranslateTransform x:Name="ContentPresenterTranslateTransform" />
+                                    </Grid.RenderTransform>
+                                    <ContentPresenter x:Name="ContentPresenter"
+                                                      Margin="{TemplateBinding Padding}"
+                                                      HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                                      Content="{TemplateBinding Content}"
+                                                      ContentTemplate="{TemplateBinding ContentTemplate}"
+                                                      ContentTransitions="{TemplateBinding ContentTransitions}" />
+                                </Grid>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+            
+            <Style TargetType="Button"
+                   x:Key="TransparentButton">
+                <Setter Property="Background"
+                        Value="Transparent" />
+                <Setter Property="BorderBrush"
+                        Value="Transparent" />
+                <Setter Property="BorderThickness"
+                        Value="0" />
+                <Setter Property="BorderBrush"
+                        Value="Transparent" />
+                <Setter Property="CornerRadius"
+                        Value="{StaticResource ControlCornerRadius}" />
+            </Style>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
